--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#a8b5a8" />
     <meta
       name="description"
       content="Wat Eat - Dinner Ordering Game"
     />
-    <title>Wat Eat??</title>
+    <title>Wat Eat?? - Dinner Ordering Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
