--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png" type="image/png" sizes="32x32" />
-    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png" type="image/png" sizes="16x16" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/youtiao-icon.png" sizes="180x180" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/youtiao-icon.png" type="image/png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=2" type="image/png" sizes="32x32" />
+    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=2" type="image/png" sizes="16x16" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=2" sizes="180x180" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2" type="image/x-icon" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#a8b5a8" />
