Update favicon to use new public/icon/ directory
1. Update HTML favicon links:
- Use proper favicon.ico from public/icon/
- Add SVG favicon support for modern browsers
- Add PNG favicon for 96x96 size
- Update apple-touch-icon path
- Use new site.webmanifest instead of old manifest.json

2. Update site.webmanifest:
- Change app name to 'Wat Eat - Dinner Ordering Game'
- Update icon paths to /icon/ directory
- Set theme color to match app (#a8b5a8)

3. Clean up old favicon files:
- Remove old favicon.ico and favicon.png from root
- Keep youtiao-icon.png in images/ for dish pictures

4. Modern favicon setup:
- ICO format for maximum compatibility
- SVG format for modern browsers
- PNG format for specific sizes
- Apple touch icon for iOS
- Web manifest for PWA support

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2" type="image/x-icon" />
-    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=2" type="image/png" sizes="32x32" />
-    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=2" type="image/png" sizes="16x16" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=2" sizes="180x180" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=2" type="image/x-icon" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/icon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/icon/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="%PUBLIC_URL%/icon/favicon-96x96.png" type="image/png" sizes="96x96" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/apple-touch-icon.png" sizes="180x180" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icon/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="%PUBLIC_URL%/icon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#a8b5a8" />
     <meta
