--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png?v=4" type="image/png" sizes="96x96" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=4" type="image/x-icon" />
-    <link rel="icon" href="%PUBLIC_URL%/icon/favicon.ico?v=4" type="image/x-icon" />
-    <link rel="icon" href="%PUBLIC_URL%/icon/favicon.svg?v=4" type="image/svg+xml" />
-    <link rel="icon" href="%PUBLIC_URL%/icon/favicon-96x96.png?v=4" type="image/png" sizes="96x96" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon/apple-touch-icon.png?v=4" sizes="180x180" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=4" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=5" type="image/png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png?v=5" type="image/png" sizes="96x96" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=5" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=5" sizes="180x180" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=5" type="image/png" />
     <link rel="manifest" href="%PUBLIC_URL%/icon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#a8b5a8" />
