--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=5" type="image/png" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png?v=5" type="image/png" sizes="96x96" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=5" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=5" sizes="180x180" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/youtiao-icon.png?v=5" type="image/png" />
-    <link rel="manifest" href="%PUBLIC_URL%/icon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png?v=6" />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.png?v=6" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png?v=6" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#a8b5a8" />
-    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/icon/apple-touch-icon.png" />
-    <meta name="msapplication-TileColor" content="#a8b5a8" />
     <meta
       name="description"
       content="Wat Eat - Dinner Ordering Game"
