--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png?v=6" />
-    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.png?v=6" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png?v=6" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=7" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.ico?v=7" type="image/x-icon" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=7" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico?v=7" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#a8b5a8" />
     <meta
