Fix favicon setup in HTML and manifest
1. Updated index.html:
- Comprehensive favicon setup with proper MIME types
- Added multiple favicon sizes and formats
- Removed cache-busting parameters (v=7)
- Updated theme-color to match new color scheme (#2C3E50)
- Added proper Apple touch icon references
- Linked manifest.json properly

2. Updated manifest.json:
- Changed icon references to use favicon-32x32.ico and favicon.ico
- Updated theme-color to #2C3E50 (dark blue-gray)
- Updated background-color to #F8F8F8 (light gray)
- Proper icon sizing declarations

This should resolve the favicon display issues across all browsers and platforms.

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=7" type="image/x-icon" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.ico?v=7" type="image/x-icon" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=7" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico?v=7" />
+    <!-- Favicon Setup -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.ico" sizes="32x32" type="image/x-icon" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.ico" sizes="32x32" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon-32x32.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#a8b5a8" />
+    <meta name="theme-color" content="#2C3E50" />
     <meta
       name="description"
       content="Wat Eat - Dinner Ordering Game"
